--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 <body>
     <header class="main-header">
         <h1 class="logo-text">ottergram</h1>
+        <h3>Хищное млекопитающее сем. куньих, с ценным мехом темно-бурого цвета, хорошо плавающее 
+            и питающееся рыбой, лягушками и т. п., а также мех этого животного.</h3>
     </header>
     <main class="main-content">
         <ul class="thumbnail-list">
